--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <button><a href="" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="" target="blank">Try it Live <i
+            <button><a href="https://shivraj2003.github.io/profile-card/" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
