--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <i class="fab fa-js"></i>
             <h2>Movie explore app</h2>
             <p>Build Using HTML,CSS,JS</p>
-            <button><a href="" target="blank">View source <i
+            <button><a href="https://github.com/shivraj2003/movies-app" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
             <button><a href="https://shivraj2003.github.io/movies-app/" target="blank">Try it Live <i
@@ -131,7 +131,7 @@
             <i class="fab fa-css3-alt"></i>
             <h2>Profile Card</h2>
             <p>Build Using HTML,CSS</p>
-            <button><a href="" target="blank">View source <i
+            <button><a href="https://github.com/shivraj2003/profile-card" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
             <button><a href="https://shivraj2003.github.io/profile-card/" target="blank">Try it Live <i
